First steps by create images for new asisstant 01
